Implemented lab4: Added dynamic module loading.

--- a/Paint101/Paint101.Desktop/Paint101.Desktop.csproj
+++ b/Paint101/Paint101.Desktop/Paint101.Desktop.csproj
@@ -43,8 +43,18 @@
     <Reference Include="Caliburn.Micro.Platform.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=8e5891231f2ed21f, processorArchitecture=MSIL">
       <HintPath>..\packages\Caliburn.Micro.3.2.0\lib\net45\Caliburn.Micro.Platform.Core.dll</HintPath>
     </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.5.0\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.IO.Compression">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.IO.Compression.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Caliburn.Micro.3.2.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
     </Reference>
@@ -67,7 +77,13 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AppBootstrapper.cs" />
+    <Compile Include="Infrastructure\NlogHelper.cs" />
+    <Compile Include="Infrastructure\NlogLoggerWrapper.cs" />
+    <Compile Include="Models\AppService.cs" />
     <Compile Include="ViewModels\CanvasViewModel.cs" />
+    <Compile Include="ViewModels\FigureCollectionViewModel.cs" />
+    <Compile Include="ViewModels\FigureLibraryViewModel.cs" />
+    <Compile Include="ViewModels\LibraryFigureViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\ShellView.xaml.cs">
       <DependentUpon>ShellView.xaml</DependentUpon>
@@ -125,13 +141,14 @@
       <Name>Paint101.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>mkdir $(ProjectDir)$(OutDir)Figures
+    <PostBuildEvent>mkdir $(ProjectDir)$(OutDir)Plugins
 
-copy /y $(SolutionDir)FiguresOutput\*.dll $(ProjectDir)$(OutDir)Figures</PostBuildEvent>
+copy /y $(SolutionDir)PluginsOutput\*.dll $(ProjectDir)$(OutDir)Plugins</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>rd /s /q $(ProjectDir)$(OutDir)Figures</PreBuildEvent>
+    <PreBuildEvent>rd /s /q $(ProjectDir)$(OutDir)Plugins</PreBuildEvent>
   </PropertyGroup>
 </Project>
