--- a/Paint101/Paint101.Desktop/Paint101.Desktop.csproj
+++ b/Paint101/Paint101.Desktop/Paint101.Desktop.csproj
@@ -83,6 +83,7 @@
     <Compile Include="ViewModels\CanvasViewModel.cs" />
     <Compile Include="ViewModels\FigureCollectionViewModel.cs" />
     <Compile Include="ViewModels\FigureLibraryViewModel.cs" />
+    <Compile Include="ViewModels\FigureViewModel.cs" />
     <Compile Include="ViewModels\LibraryFigureViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\ShellView.xaml.cs">
