Implemented lab6: Support for third party libraries.

--- a/Paint101/Paint101.Core/Paint101.Core.csproj
+++ b/Paint101/Paint101.Core/Paint101.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Paint101.Api\Paint101.Api.csproj" />
+    <ProjectReference Include="..\ThirdParty\Shape.Api\Shape.Api.csproj" />
   </ItemGroup>
 
 </Project>
